# medical-copilot

./: .env.example  .gitignore  FIX_PLAN.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  start.bat  start.sh  start_services.bat  start_vector.bat  项目架构文档.md
.claude/: settings.local.json
.sisyphus/drafts/: settings-feature.md
.sisyphus/plans/: auto_document_loader.md  frontend_redesign.md  incremental_workflow.md  voice_medical_copilot.md
data/guidelines/: .gitkeep  clinical_guidelines.json
data/raw/: .gitkeep
frontend/: app.py
scripts/: build_llamaindex.py  build_rag_index.py  build_vector_index.py  compare_retrieval.py  migrate_forward.sql  migrate_rollback.sql  prepare_data.py  test_embedding.py  test_llamagraph.py  verify_migrations.py
src/: __init__.py  config.py  exceptions.py  main.py
src/agents/: __init__.py  dialogue_agent.py  generation_agent.py  qa_agent.py  retrieval_agent_llamagraph.py  retrieval_agent_llamaindex.py  retrieval_agent_simple.py  retrieval_agent_vector.py  revision_agent.py
src/api/: routes.py
src/graph/: __init__.py  state.py  workflow.py
src/utils/: 01.py  (+2 more)
tests/: conftest.py  test_agents.py  test_api_legacy_upload.py  test_api_versioned_upload.py  test_asr.py  test_dialogue_agent.py  test_generate_emr_api.py  test_generation_agent.py  test_in_memory_repository.py  test_integration_upload_flow.py  test_performance_upload_flow.py  test_qa_agent.py  test_rag_core_service.py  test_rag_scaffold.py  test_rag_service_adapter.py  test_retrieval_scoring.py  test_revision_agent.py  test_workflow_integration.py
(+14 files in other folders)
